# OptroLab

./: CMakeLists.txt
cmake/: FindSpinnaker.cmake
src/: CMakeLists.txt  behavdispworker.cpp  behavdispworker.h  behavworker.cpp  behavworker.h  camdisplay.cpp  camdisplay.h  centralwidget.cpp  centralwidget.h  chameleoncamera.cpp  chameleoncamera.h  controlswidget.cpp  controlswidget.h  dds.cpp  dds.h  ddsdialog.cpp  ddsdialog.h  displayworker.cpp  displayworker.h  elreadoutworker.cpp  elreadoutworker.h  main.cpp  mainpage.cpp  mainpage.h  mainwindow.cpp  mainwindow.h  optrod.cpp  optrod.h  optrode.cpp  optrode.h  resources.qrc  savestackworker.cpp  savestackworker.h  settings.cpp  settings.h  settingspage.cpp  settingspage.h  tasks.cpp  tasks.h  version.h
